portfolio/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  annotations:
    linkerd.io/inject: enabled
