portfolio/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: portfolio
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`portfolio.claytonc.dev`)
      kind: Rule
#      middlewares: 
#        - name: auth
      services:
      - name: portfolio
        port: 80
  #    middlewares:
  #      - name: auth
  # Use the secret generated by cert-manager
  tls:
    secretName: portfolio-tls
