portfolio/portfolio.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  annotations:
    linkerd.io/inject: enabled

---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: portfolio
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`portfolio.claytonc.dev`)
      kind: Rule
      services:
      - name: portfolio
        port: 80
  tls:
    secretName: portfolio-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: clanktron/portfolio:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"        
        ports:
        - containerPort: 80
        imagePullPolicy: Always
